src/components/Carousel/carousel.module.scss
@import "../../styles/utility/responds-to.scss";

.carousel-wrapper {
  position: relative;
  &:after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    height: 10px;
    background: #ffffff;
  }
}

.carousel {
  scroll-snap-type: x mandatory;
  overflow-x: scroll;
  -webkit-overflow-scrolling: touch;
  white-space: nowrap;
  padding: 3.5rem 40px 10rem;
}

